--- a/fhir-erpnext/pom.xml
+++ b/fhir-erpnext/pom.xml
@@ -1,46 +1,44 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<project xmlns="http://maven.apache.org/POM/4.0.0"
-         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
-    <modelVersion>4.0.0</modelVersion>
-    <parent>
-        <groupId>com.ozonehis.fhir</groupId>
-        <artifactId>fhir-erpnext-parent</artifactId>
-        <version>1.0.0-SNAPSHOT</version>
-        <relativePath></relativePath>
-    </parent>
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+  <modelVersion>4.0.0</modelVersion>
+  <parent>
+    <groupId>com.ozonehis.fhir</groupId>
+    <artifactId>fhir-erpnext-parent</artifactId>
+    <version>1.0.0-SNAPSHOT</version>
+    <relativePath/>
+  </parent>
 
-    <artifactId>fhir-erpnext</artifactId>
-    <name>FHIR ERPNext Facade</name>
-    <description>FHIR ERPNext Facade</description>
+  <artifactId>fhir-erpnext</artifactId>
+  <name>FHIR ERPNext Facade</name>
+  <description>FHIR ERPNext Facade</description>
 
-    <properties>
-        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-        <maven.compiler.source>17</maven.compiler.source>
-        <maven.compiler.target>17</maven.compiler.target>
-        <fhir.structures.backport-r4.version>1.0.0-SNAPSHOT</fhir.structures.backport-r4.version>
-        <camel.frappe.version>1.1.0-SNAPSHOT</camel.frappe.version>
-        <ERPNextFHIRMapper.version>1.2.0-SNAPSHOT</ERPNextFHIRMapper.version>
-    </properties>
+  <properties>
+    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+    <maven.compiler.source>17</maven.compiler.source>
+    <maven.compiler.target>17</maven.compiler.target>
+    <fhir.structures.backport-r4.version>1.0.0-SNAPSHOT</fhir.structures.backport-r4.version>
+    <camel.frappe.version>1.1.0-SNAPSHOT</camel.frappe.version>
+    <ERPNextFHIRMapper.version>1.2.0-SNAPSHOT</ERPNextFHIRMapper.version>
+  </properties>
 
-    <dependencies>
-        <dependency>
-            <groupId>com.ozonehis.fhir</groupId>
-            <artifactId>fhir-structures-backport-r4</artifactId>
-            <version>${fhir.structures.backport-r4.version}</version>
-        </dependency>
+  <dependencies>
+    <dependency>
+      <groupId>com.ozonehis.fhir</groupId>
+      <artifactId>fhir-structures-backport-r4</artifactId>
+      <version>${fhir.structures.backport-r4.version}</version>
+    </dependency>
 
-        <dependency>
-            <groupId>com.ozonehis.camel</groupId>
-            <artifactId>camel-frappe-api</artifactId>
-            <version>${camel.frappe.version}</version>
-        </dependency>
+    <dependency>
+      <groupId>com.ozonehis.camel</groupId>
+      <artifactId>camel-frappe-api</artifactId>
+      <version>${camel.frappe.version}</version>
+    </dependency>
 
-        <dependency>
-            <groupId>com.ozonehis</groupId>
-            <artifactId>erpnext-fhir-mapper</artifactId>
-            <version>${ERPNextFHIRMapper.version}</version>
-        </dependency>
-    </dependencies>
+    <dependency>
+      <groupId>com.ozonehis</groupId>
+      <artifactId>erpnext-fhir-mapper</artifactId>
+      <version>${ERPNextFHIRMapper.version}</version>
+    </dependency>
+  </dependencies>
 
 </project>
