--- a/pom.xml
+++ b/pom.xml
@@ -180,6 +180,39 @@
           </execution>
         </executions>
       </plugin>
+      <!-- License -->
+      <plugin>
+        <groupId>com.mycila</groupId>
+        <artifactId>license-maven-plugin</artifactId>
+        <version>4.3</version>
+        <configuration>
+          <properties>
+            <owner>${project.organization.name}</owner>
+            <email>info@ozone-his.com</email>
+            <year>${project.inceptionYear}</year>
+          </properties>
+          <licenseSets>
+            <licenseSet>
+              <header>com/mycila/maven/plugin/license/templates/MPL-2.txt</header>
+              <excludes>
+                <exclude>**/README</exclude>
+                <exclude>**/target/**</exclude>
+                <exclude>.java-version</exclude>
+              </excludes>
+            </licenseSet>
+          </licenseSets>
+        </configuration>
+        <executions>
+          <execution>
+            <id>format</id>
+            <goals>
+              <goal>format</goal>
+              <goal>check</goal>
+            </goals>
+            <phase>install</phase>
+          </execution>
+        </executions>
+      </plugin>
     </plugins>
   </build>
 </project>
