OZ-672: Implement ERPNext Restful servlet + auto-configuration

--- a/fhir-erpnext/src/main/resources/fhir-erpnext.properties
+++ b/fhir-erpnext/src/main/resources/fhir-erpnext.properties
@@ -6,3 +6,9 @@
 # file, You can obtain one at http://mozilla.org/MPL/2.0/.
 #
 
+erpnext.serverUrl=http://localhost:8082/api
+# Username to authenticate with
+erpnext.username=Administrator
+# Password to authenticate with
+erpnext.password=password
+# ----------------------------------------------------------------------------------------------------------------------
