--- a/pom.xml
+++ b/pom.xml
@@ -10,12 +10,6 @@
 -->
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
   <modelVersion>4.0.0</modelVersion>
-  <parent>
-    <groupId>org.springframework.boot</groupId>
-    <artifactId>spring-boot-starter-parent</artifactId>
-    <version>3.3.2</version>
-    <relativePath/>
-  </parent>
   <groupId>com.ozonehis.fhir</groupId>
   <artifactId>fhir-erpnext-parent</artifactId>
   <version>1.0.0-SNAPSHOT</version>
@@ -38,7 +32,7 @@
   </developers>
 
   <modules>
-    <module>app</module>
+    <module>fhir-erpnext-app</module>
     <module>fhir-erpnext</module>
   </modules>
 
@@ -47,6 +41,7 @@
     <hapi.fhir.version>7.2.2</hapi.fhir.version>
     <jakarta.servlet.version>5.0.0</jakarta.servlet.version>
     <lombok.version>1.18.30</lombok.version>
+    <spring-boot.version>3.3.3</spring-boot.version>
     <spotless.version>2.43.0</spotless.version>
     <palantirJavaFormat.version>2.49.0</palantirJavaFormat.version>
   </properties>
@@ -75,6 +70,7 @@
     <dependency>
       <groupId>org.springframework.boot</groupId>
       <artifactId>spring-boot-starter-web</artifactId>
+      <version>${spring-boot.version}</version>
     </dependency>
 
     <!-- HAPI FHIR -->
@@ -109,6 +105,7 @@
     <dependency>
       <groupId>org.springframework.boot</groupId>
       <artifactId>spring-boot-starter-test</artifactId>
+      <version>${spring-boot.version}</version>
       <scope>test</scope>
     </dependency>
   </dependencies>
