--- a/pom.xml
+++ b/pom.xml
@@ -110,6 +110,35 @@
     </dependency>
   </dependencies>
 
+  <repositories>
+    <repository>
+      <id>openmrs-repo</id>
+      <name>OpenMRS Nexus Repository</name>
+      <url>https://mavenrepo.openmrs.org/public</url>
+    </repository>
+    <repository>
+      <snapshots>
+        <enabled>true</enabled>
+      </snapshots>
+      <id>openmrs-snapshots</id>
+      <name>OpenMRS Snapshots Repository</name>
+      <url>https://mavenrepo.openmrs.org/snapshots</url>
+    </repository>
+    <repository>
+      <id>mks-repo</id>
+      <name>Mekom Solutions Maven repository</name>
+      <url>https://nexus.mekomsolutions.net/repository/maven-public</url>
+    </repository>
+    <repository>
+      <snapshots>
+        <enabled>true</enabled>
+      </snapshots>
+      <id>mks-repo-snapshots</id>
+      <name>Mekom Solutions Maven repository for snapshots</name>
+      <url>https://nexus.mekomsolutions.net/repository/maven-public-snapshots</url>
+    </repository>
+  </repositories>
+
   <build>
     <plugins>
       <!-- Spotless -->
